--- a/build.xml
+++ b/build.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" ?>
 
-<project name="SnakeTest" default="jarfile">
+<project name="StarvingBug" default="jarfile">
 
     <!-- Initialize build properties  -->
     <target name="init" description="Initializes properties">
-        <property name="project.name" value="SnakeTest" />
+        <property name="project.name" value="StarvingBug" />
         <property name="src.dir" value="src" />
         <property name="main.class" value="org.academiadecodigo.hackstreetboys.Main" />
         <property name="build.dir" value="build" />
